--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.26.1",
     "lucide-react": "^0.541.0",
     "next": "14.2.32",
     "next-themes": "^0.4.6",
